--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '3'
 services:
+  redis:
+    image: redis:5.0.3
+    container_name: redis
+    ports:
+      - 6379:6379
   scylla-node1:
     image: scylladb/scylla:5.1.0
     container_name: scylla-node1
